styles.css
body {
    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
}

img.pic-1 {
    max-width: 600px;
    height: auto;
}

a {
    text-decoration: none;
    color: #F9FAF8
}

ul {
    list-style-type: none;
    font-size: 18px;
    display: flex;
    padding: 0;
    margin: 0;
    gap: 50px;
    color: #E5E7EB;
}

.header, .footer {
    background: #1F2937;
    display: flex;

}

.header {
    justify-content: space-between;
    align-items: center;
    margin: 0;
    padding: 30px 300px 30px 300px;
}

.intro {
    background: #1F2937;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
    padding: 100px 300px 100px 300px;
    gap: 100px;
}

.main-title {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: 500px;
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

.text {
    font-weight: 400;
    font-size: 18px;
    color: #aeb0b3;
    padding-top: 20px;
}

.right {
    display: flex;
    align-items: center;
}

.logo {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 900;
}

.sign-up {
    background-color: #3882F6;
    border: 1px solid #3882F6;
    color: #F9FAF8;
    border-radius: 8px;
    font-weight: 700;
    font-size: 24px;
    padding: 10px 35px;
    margin-top: 70px;
}

.sign-up:hover {
    opacity: 1;
    background-color: rgb(48, 79, 170);
    border: 1px #3882F6 solid;
}

.sign-up:active {
    background-color: #0b3f94;
    border: 1px #000000 solid;
}

.item {
    width: 180px;
    height: 180px;
    border: 4px solid #3882F6;
    border-radius: 20px;
}

.info-header {
    display: flex;
    justify-content: center;
    font-size: 36px;
    font-weight: 700;
    color: #1F2937;
    padding: 50px;
}

.random {
    display: flex;
    justify-content: center;
    margin: 0;
    gap: 60px;
    padding-bottom: 100px;

}

.container {
    max-width: 180px;
    text-align: center;
}

.quote {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: space-between;
    padding: 150px 500px;
    background-color: #E5E7EB;
}

.paragraph {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
}

.author {
    text-align: end;
    font-size: 28px;
    color: #1F2937;
    font-weight: 800;
}

.action {
    background-color: #3882F6;
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
    padding: 60px 160px;
    margin: 100px 300px;
}

.action-header {
    color: #E5E7EB;
    font-weight: 800;
    font-size: 28px;
    padding-bottom: 10px;
}

.action-text {
    color: #e7e8e9;
    font-size: 18px;
}

.action-signup {
    background-color: #3882F6;
    border: 3px solid #F9FAF8;
    color: #F9FAF8;
    border-radius: 8px;
    font-weight: 700;
    font-size: 24px;
    padding: 10px 45px;
    margin-top: 10px;
    
}

.action-signup:hover {
    opacity: 1;
    background-color: rgb(48, 79, 170);
    border: 3px #3882F6 solid;
}

.action-signup:active {
    background-color: #0b3f94;
    border: 3px #000000 solid;
}
.footer {
    justify-content: center;
    padding-top: 50px;
    padding-bottom: 50px;
    color: #f4f6fa;
    font-size: 18px;
}

